{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 62,
  "lineage": "a87395c3-95b9-2a45-009e-f2085d8b2090",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-076cd0e64b2cdc9c0",
            "domain": "vpc",
            "id": "eipalloc-0edff67676f3def4d",
            "network_interface": "eni-06c050b51d2fbb388",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-129-34-24.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.34.24",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-vib",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a63f96e85105c6d3",
            "arn": "arn:aws:ec2:us-east-2:145182795582:instance/i-04c9f8c054e121dd4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c9f8c054e121dd4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key-terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-06c050b51d2fbb388"
              }
            ],
            "primary_network_interface_id": "eni-06c050b51d2fbb388",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "3.129.34.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a7dd82b5038c37b1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04747f8fddee0b66c",
            "tags": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09feb6572e1a44dab"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-vib",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145182795582:internet-gateway/igw-090ab9cfc37d2741f",
            "id": "igw-090ab9cfc37d2741f",
            "owner_id": "145182795582",
            "vpc_id": "vpc-0031a479d136178e0"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-vib",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-06c050b51d2fbb388",
            "mac_address": "02:7c:5d:04:be:5a",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09feb6572e1a44dab"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04747f8fddee0b66c"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0604fe91720e14326",
            "owner_id": "145182795582",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090ab9cfc37d2741f",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090ab9cfc37d2741f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod"
            },
            "vpc_id": "vpc-0031a479d136178e0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f20aa0441c0de9a4",
            "route_table_id": "rtb-0604fe91720e14326",
            "subnet_id": "subnet-04747f8fddee0b66c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145182795582:security-group/sg-09feb6572e1a44dab",
            "description": "Allow Web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09feb6572e1a44dab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": null,
            "owner_id": "145182795582",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0031a479d136178e0"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145182795582:subnet/subnet-04747f8fddee0b66c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04747f8fddee0b66c",
            "map_public_ip_on_launch": false,
            "owner_id": "145182795582",
            "tags": {
              "Name": "prod-subnet"
            },
            "vpc_id": "vpc-0031a479d136178e0"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145182795582:vpc/vpc-0031a479d136178e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd3ef50b75bbed9c",
            "default_route_table_id": "rtb-060f9635823c8e7b3",
            "default_security_group_id": "sg-0745837eb7e95ada3",
            "dhcp_options_id": "dopt-745ce11f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0031a479d136178e0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-060f9635823c8e7b3",
            "owner_id": "145182795582",
            "tags": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}